css/ext_iastate.css
/* ... */
/* Reduce size of h4 */
.h4, h4 {
	font-size: 1.125rem;
	font-family: Nimbus sans,sans-serif;
	font-weight: 700;
	letter-spacing: 0;
	margin: 2rem 0 0.5625rem;
	line-height: 1.38889;
}

/* Reduce size of h5 */
.h5 {
	font-size: 1rem;
	line-height: 1.5625;
	font-family: Nimbus Sans,sans-serif;
	font-weight: 700;
	letter-spacing: 0;
	margin: 2rem 0 0.5625rem;
}

/* --------------------------------------  */
/* ## Red Bar
/* --------------------------------------  */

/* Reduce size of yellow bar */
.isu-site-navbar {
	border-bottom: 4px solid #f1be48;
}

/* Reduce space on top and bottom of wordmark and sitename */
.isu-row-site-navbar {
	margin-top: -15px;
	margin-bottom: -15px;
}

/* Site Name Size Change */
.isu-wordmark-sitename {
	font-size: 22px;
	margin-left: -4%;
	font-weight: 700;
	line-height: 24px;
	padding-top: 13px;
	padding-bottom: 10px;
}

.isu-wordmark-sitename a:hover {
	color: #fff;
	text-decoration: none;
}

.isu-social-menu-red {
	text-align: right;
}

/* --------------------------------------  */
/* ## Main Menu
/* --------------------------------------  */

/* Add hover effect to main menu links */
.isu-nav-link:hover {
	border-bottom: 3px solid #bbb !important;
}

/* Dropdown Menu */
.isu-dropdown-menu {
	background: #fff;
	box-shadow: 0px 2px 3px 0px #aaa;
}

.isu-dropdown-item a:focus,
.isu-dropdown-item a:hover,
.isu-dropdown-item a.active,
.isu-dropdown-item a:active {
	background: transparent;
	color: #c8102e;
}

.navbar-nav .dropdown-menu {
	box-shadow: 0px 2px 3px 0px #aaa;
}

/* Main Menu link changes */
.navbar-expand-lg .navbar-nav .nav-link {
	padding: 10px 12px;
	letter-spacing: .5px;
	border-bottom: 3px solid transparent;
	transition: all 0.1s ease;
}

/* Main Menu Link Hover Changes */
.isu-nav-link:hover {
	background: #eeeeee;
	border-bottom: 3px solid #bbb;
}

/* Third Level Menu */
.isu-dropdown-submenu {
  left: 100%;
  margin-top: -47px;
}

a.isu-dropdown-submenu {
  display: block;
  background: #fff;
  padding: 10px 12px;
}

/* --------------------------------------  */
/* ## Banner Slider
/* -------------------------------------  */

.flexslider {
	background: none;
	border: none;
}

/* ------------------------------------- */
/* ## Panel
/* ------------------------------------- */

.layout--threecol-33-34-33 > .layout__region--first, .layout--threecol-33-34-33 > .layout__region--third, .layout--threecol-33-34-33 > .layout__region--second {
	flex: 0 1 31%;
	min-width: 250px;
	margin: 0 0.5rem;
	margin-bottom: 1rem;
	padding: 1rem;
	border: 1px solid #ddd;
}

.col-lg-9 {
	flex: 0 0 100%;
	max-width: 100%;
}


/* --------------------------------------  */
/* ## Content Area
/* --------------------------------------  */

.isu-region_content {
	margin: auto;
	min-width: 100%;
}

/* Breadcrumb Styling
.isu-breadcrumb {
	margin-left: 11px;
}
*/

/* Translation */
.gtranslate {
	float: right;
	padding: 15px;
}

.node--unpublished {
	background: #fff4f4;
	border: 1px dashed #fff4f4;
}

/*article:not(.isu-user):not(.isu-search_collapse) {
	margin-left: 54px;
}*/

/* Page Title */
.isu-page-title {
	font-family: Merriweather,serif;
	line-height: 1.32857;
	font-weight: 400;
	letter-spacing: 0;
	margin: 3.5625rem 0 0.625rem;
}

/* Change Authored on information display */
.isu-user ~ div > .isu-submitted-by_name, .isu-user ~ div > .isu-submitted-by_date {
	display: inline-block;
}

.isu-user ~ div > .isu-submitted-by_name {
	font-size: 0.85rem;
}

li article:not(.isu-user):not(.isu-search_collapse) {
	margin-bottom: 0rem;
}

span.authored-on {
	font-style: oblique;
	font-size: .9em;
	color: #666;
}

/* Media Captions */
body.cke_editable figure figcaption {
	margin-top: 0;
}

.caption > figcaption {
	background-color: #eeeeee;
	margin-top: -2.5rem;
	padding: 14px;
	border-left: .15rem solid #f1be48;
	font-size: 14px;
	font-style: italic;
}

/* Image Styles */
figure.align-left {
	margin-right: 25px;
}

.align-left {
	margin-right: 25px;
}

figure.align-right {
	margin-left: 25px;
}

.align-right {
	margin-left: 25px;
}

.views-view-grid .views-col {
	max-width: 90%;
}

.views-view-grid .views-row {
	padding: 15px;
}

/* Sidebar */
.isu-page-column {
	padding-left: 11px;
	max-width: 75%;
}

.isu-region.isu-region_sidebar-second {
	margin-top: 2rem;
}

.isu-region_sidebar-second .h3 {
	border-bottom: 1px solid #ddd;
}

.isu-sidebar .isu-block {
	padding: 1.5rem;
	border: 1px solid #ddd;
	border-radius: 3px;
}

.isu-block-title {
	font-weight: 700; 
	padding: 0 0 13px 0;
	letter-spacing: 0;
	font-family: Merriweather,serif;
	border-bottom: #fff;
}

.isu-block-title:before {
  	content: "";
 	position: absolute;
  	left: 0;
  	bottom: 0;
  	height: 1px;
  	width: 3.125rem;
  	border-bottom: 0.125rem solid #f1be48;
}

/* Aligns Block Title Border */
.layout--alignment--left .isu-block-title {
	font-weight: 700; 
	padding: 0 0 13px 0;
	letter-spacing: 0;
	font-family: Merriweather,serif;
	border-bottom: #fff;
}

.layout--alignment--left .isu-block-title:before {
  	content: "";
    	border-bottom: .125rem solid #f1be48;
    	bottom: 0;
    	left: 0;
    	width: 3.5rem;
    	position: absolute;
}

.layout--alignment--right .isu-block-title {
	font-weight: 700; 
	padding: 0 0 13px 0;
	letter-spacing: 0;
	font-family: Merriweather,serif;
	border-bottom: #fff;
}

.layout--alignment--right .isu-block-title:before {
  	content: "";
    	border-bottom: .125rem solid #f1be48;
    	bottom: 0;
    	left: 100%;
    	margin-left: -3.5rem;
    	width: 3.5rem;
    	position: absolute;
}

.layout--alignment--center .isu-block-title {
	font-weight: 700; 
	padding: 0 0 13px 0;
	letter-spacing: 0;
	font-family: Merriweather,serif;
	border-bottom: #fff;
}

.layout--alignment--center .isu-block-title:before {
  	content: "";
    	border-bottom: .125rem solid #f1be48;
    	bottom: 0;
    	left: 50%;
    	margin-left: -1.75rem;
    	width: 3.5rem;
    	position: absolute;
}
/* ... */

